--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ body {
 
 body {
 	font-family: Poppins;
-	font-size: 0.83vw;
+	font-size: 16px;
 	color: #FFFFFF;
 }
 
@@ -58,58 +58,109 @@ body {
 }
 
 [class*="__container"] {
-	max-width: 60.94vw;
+	max-width: 1170px;
 	margin: 0px auto;
-	padding: 0px 0.78vw;
+	padding: 0px 15px;
 }
 
-
-/* TABLET */
 @media (max-width: 1200px) {
 	[class*="__container"] {
-		max-width: 724px;
+		max-width: 970px;
 	}
 }
-/* MOBILE */
-@media (max-width: 767.98px) {
+
+@media (max-width: 992px) {
 	[class*="__container"] {
-		max-width: 590px;
+		max-width: 750px;
+	}
+
+	.single__items {
+		flex-direction: column;
+		row-gap: 30px;
+	}
+
+	.bright-lights__content {
+		flex-wrap: wrap;
+		align-self: center;
+		justify-content: center !important;
+		margin-bottom: 100px;
+	}
+
+	.bright-lights__add__img {
+		display: none;
+	}
+
+	.tracks__container {
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+
+	.tracks__img {
+		order: 2;
+	}
+
+	.tracks__content__follow {
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+
+	.one {
+		display: none;
+	}
+
+	.four {
+		display: none;
+	}
+
+	.gallery__container {
+		display: flex !important;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.slider_line {
+		justify-content: center;
+	}
+
+	.card {
+		width: 50% !important;
+	}
+
+	.card:not(:first-child) {
+		display: none;
+	}
+
+	.card__content {
+		width: inherit;
 	}
 }
-/* MOBILE SMALL */
-@media (max-width: 479.98px) {
+
+@media (max-width: 767px) {
 	[class*="__container"] {
-		max-width: 340px;
+		max-width: none;
 	}
 }
-
-
-
-
-
-
 
 
 .title {
 	font-weight: 700;
-	font-size: 2.50vw;
-	line-height: 3.75vw;
+	font-size: 48px;
+	line-height: 72px;
 	display: flex;
-	gap: 1.56vw;
+	gap: 30px;
 	align-items: center;
 }
 
 .title_img {
-	width: 3.33vw;
-	height: 1.61vw;
+	width: 64px;
+	height: 31px;
 }
-
 
 /* -------------------------------------------------------- */
 
 .header__container {
 	display: flex;
-	margin-top: 1.56vw;
+	margin-top: 30px;
 	align-items: center;
 	justify-content: center;
 	gap: 3.39vw;
@@ -118,7 +169,7 @@ body {
 .logo {
 	display: flex;
 	align-items: center;
-	gap: 1.04vw;
+	gap: 20px;
 }
 
 .logo:hover {
@@ -128,14 +179,14 @@ body {
 }
 
 .logo_face {
-	width: 3.13vw;
-	height: 3.13vw;
+	width: 60px;
+	height: 60px;
 }
 
 .logo_brand {
-	width: 7.45vw;
-	height: 2.19vw;
-	margin-top: 0.8vw;
+	width: 143px;
+	height: 42px;
+	margin-top: 15px;
 }
 
 .menu__list {
@@ -145,9 +196,9 @@ body {
 
 .menu__link {
 	font-weight: 600;
-	font-size: 0.94vw;
-	line-height: 1.41vw;
-	letter-spacing: 0.05vw;
+	font-size: 18px;
+	line-height: 27px;
+	letter-spacing: 1px;
 }
 
 .menu__link:hover {
@@ -165,41 +216,36 @@ body {
 }
 
 .single__title {
-	margin-bottom: 0.52vw;
+	margin-bottom: 10px;
 }
 
 .single__name {
 	font-weight: 700;
-	font-size: 5.21vw;
-	line-height: 7.81vw;
+	font-size: 100px;
+	line-height: 150px;
 	color: transparent;
-	-webkit-text-stroke: 0.05vw #FFFFFF;
-	margin-bottom: 2.60vw;
+	-webkit-text-stroke: 1px #FFFFFF;
+	margin-bottom: 50px;
 }
 
 .single__audio {
 	background: none;
 	width: 100%;
-	margin-bottom: 6.77vw;
+	margin-bottom: 130px;
 }
 
 .single__items {
 	display: flex;
-	justify-content: space-between;
+	column-gap: 50px;
 	margin-bottom: 9.38vw;
+	align-items: center;
 }
 
 .single__item {
-	width: 18.23vw;
-	height: 15.63vw;
+	width: 33%;
 	border-radius: 20px 0px;
 	position: relative;
 }
-
-.single__item_bg {
-	width: 100%;
-}
-
 
 .single__item__content {
 	display: block;
@@ -207,12 +253,12 @@ body {
 	z-index: 10;
 	bottom: 0;
 	background: url(../img/main/frame.png) 0 0 no-repeat;
-	width: inherit;
-	padding: 1.04vw;
-	font-size: 0.83vw;
+	padding: 20px;
+	font-size: 16px;
 	font-weight: 500;
-	line-height: 1.25vw;
+	line-height: 24px;
 	border-radius: 20px 0px;
+	width: 100%;
 }
 
 
@@ -220,90 +266,96 @@ body {
 
 .bright-lights__content {
 	display: flex;
-	gap: 6.51vw;
+	justify-content: space-between;
 }
 
 .bright-lights__content__text {
 	margin-top: 3.13vw;
 	margin-bottom: 12.50vw;
-	width: 28.13vw;
+	/*width: 540px;*/
+	width: 60%;
+	padding-right: 1.04vw;
+	display: flex;
+	flex-direction: column;
 }
 
 .bright-lights__content__text_descr {
 	margin-bottom: 3.13vw;
 	font-weight: 400;
-	font-size: 0.83vw;
-	line-height: 1.25vw;
+	font-size: 16px;
+	line-height: 24px;
 	opacity: 0.7;
 }
 
 .facts {
 	display: flex;
 	flex-wrap: wrap;
-	column-gap: 2.08vw;
-	row-gap: 1.56vw;
+	column-gap: 40px;
+	row-gap: 30px;
 }
 
 .fact {
 
 	font-weight: 600;
-	font-size: 0.94vw;
-	line-height: 1.41vw;
+	font-size: 18px;
+	line-height: 27px;
 }
 
 .fact_img {
-	width: 1.56vw;
-	height: 1.56vw;
-	margin-right: 1.04vw;
+	width: 30px;
+	height: 30px;
+	margin-right: 20px;
 }
 
 
 .bright-lights__content__imgs {
 	position: relative;
+	width: 40%;
+	display: flex;
+	justify-content: end;
+	margin-right: 95px;
 }
 
 .bright-lights__content_img {
 	position: relative;
 	border-radius: 30px 0px;
-	width: 18.23vw;
-	height: 20.83vw;
+	width: 350px;
+	height: 400px;
 	z-index: 10;
 }
 
 .bright-lights__content_img:last-child {
 	position: absolute;
-	top: 3.44vw;
-	left: 4.95vw;
+	top: 66px;
+	right: -95px;
 	z-index: 1;
 }
 
 .bright-lights__add__container {
-	height: 16.41vw;
-	background: #1C1B21;
 	border: 1px solid #FFFFFF;
 	border-radius: 30px 0px;
 	display: flex;
-	column-gap: 3.13vw;
+	column-gap: 60px;
 	position: relative;
-	margin-bottom: 13.80vw;
+	margin-bottom: 265px;
 }
 
 .bright-lights__add__content {
-	margin: 2.60vw 0 2.60vw 4.17vw;
-	width: 27.08vw;
-	font-size: 0.94vw;
-	line-height: 1.41vw;
+	padding: 50px 0 50px 80px;
+	width: 55%;
+	font-size: 18px;
+	line-height: 27px;
 }
 
 .bright-lights__add__content_text {
 	font-weight: 400;
-	padding-bottom: 1.30vw;
+	padding-bottom: 25px;
 	border-bottom: 1px solid #FFFFFF;
 }
 
 .bright-lights__add__content_link {
 	display: inline-block;
-	margin-top: 1.30vw;
+	margin-top: 25px;
 	font-weight: 700;
 	color: #7A66CC;
 }
@@ -313,83 +365,88 @@ body {
 }
 
 .bright-lights__add__img img {
-	width: 19.27vw;
-	height: 25.16vw;
+	width: 370px;
+	height: 483px;
 	position: absolute;
 	top: -33.3%;
+	left: 660px;
 }
 
 /*<---------------------------------------------->*/
 
-.tracks .tracks__container {
+.tracks__container {
 	display: flex;
-	column-gap: 3.13vw;
-	margin-bottom: 9.38vw;
+	column-gap: 5.13vw;
+	margin-bottom: 15.38vw;
 }
 
 .tracks__img {
-
-	margin-top: 1.82vw;
+	width: 50%;
+	margin-top: 35px;
 }
 
 .tracks__img img {
-	width: 26.56vw;
-	height: 26.56vw;
+	width: 510px;
+	height: 510px;
 }
 
-.tracks__content .tracks__title {
+.tracks__content {
+	width: 50%;
+}
+
+.tracks__title {
 	margin-bottom: 3.13vw;
 }
 
 .tracks__audio {
-	margin-bottom: 2.60vw;
+	margin-bottom: 50px;
 }
 
 
 .tracks__list {
-	margin-bottom: 2.60vw;
-	margin-left: 1.56vw;
+	margin-bottom: 50px;
+	margin-left: 30px;
 	opacity: 0.5;
 }
 
 .tracks__list_item {
 	list-style-type: decimal-leading-zero;
 	font-weight: 600;
-	font-size: 0.94vw;
-	line-height: 1.41vw;
-	margin-bottom: 1.04vw;
-	padding-left: 0.78vw;
+	font-size: 18px;
+	line-height: 27px;
+	margin-bottom: 20px;
+	padding-left: 15px;
 }
 
 .tracks__list_item::marker {
 	text-align: left !important;
 	font-weight: 700;
-	font-size: 0.73vw;
+	font-size: 14px;
 	opacity: 0.5;
 
 }
 
 .tracks__content__follow {
 	display: flex;
-	gap: 2.08vw;
+	gap: 40px;
 
 }
 
 .tracks__content__follow_descr {
 	font-weight: 600;
-	font-size: 1.25vw;
-	line-height: 1.88vw;
+	font-size: 24px;
+	line-height: 36px;
 }
 
 .tracks__content__follow__links {
 	display: flex;
-	gap: 1.56vw;
+	gap: 2.56vw;
 }
 
 .tracks__content__follow__links_link {
 	margin-top: 1px;
-	padding: 0px 0px 0px 2.08vw;
-	line-height: 1.09vw;
+	padding: 0px 0px 0px 40px;
+	line-height: 21px;
 	display: flex;
 	align-items: center;
 }
@@ -402,48 +459,46 @@ body {
 
 .link_spotify {
 	background: url(../img/footer/sp.svg) 0 0 no-repeat;
-	background-size: 1.56vw 1.56vw;
+	background-size: 30px 30px;
 }
 
 .link_itunes {
 	background: url(../img/footer/itunes.svg) 0 0 no-repeat;
-	background-size: 1.56vw 1.56vw;
+	background-size: 30px 30px;
 }
 
 /*<---------------------------------------------->*/
 .gallery__container {
 	display: grid;
-	grid-template-columns: 13.28vw 13.28vw 13.28vw 13.28vw;
-	grid-template-rows: 12.24vw 12.24vw;
+	/*grid-template-columns: 255px 255px 255px 255px;*/
+	grid-template-rows: 235px 235px;
+	grid-template-columns: 22% 22% 22% 22%;
 	justify-content: space-between;
-	row-gap: 1.56vw;
-	margin-bottom: 9.38vw;
+	row-gap: 30px;
+	margin-bottom: 180px;
 }
 
 .gallery_img {
-	width: 13.28vw;
-	height: 12.24vw;
+	width: 255px;
+	height: 235px;
 }
 
 .one {
 	grid-column: 1;
 	grid-row: 1 / 3;
-	width: 13.28vw;
-	height: 26.04vw;
+	height: 500px;
 }
 
 .four {
 	grid-column: 4;
 	grid-row: 1 / 3;
-	width: 13.28vw;
-	height: 26.04vw;
+	height: 500px;
 }
 
 .five {
 	grid-column: 2;
 	grid-row: 2 / 3;
-	width: 28.13vw;
-	height: 12.24vw;
+	height: 235px;
 }
 
 .gallery_link {
@@ -451,18 +506,18 @@ body {
 	background: url(../img/gallery/img5.png) 0 0 no-repeat;
 	background-size: contain;
 	border-radius: 10px 0px;
-	width: 28.13vw;
-	height: 12.24vw;
+	width: 540px;
+	height: 235px;
 	position: relative;
 }
 
 .gallery_link span {
 	position: absolute;
-	top: 5.21vw;
+	top: 100px;
 	left: 20%;
 	font-weight: 700;
-	font-size: 1.25vw;
-	line-height: 1.88vw;
+	font-size: 24px;
+	line-height: 36px;
 	color: #7A66CC;
 }
 
@@ -475,7 +530,7 @@ body {
 /*<---------------------------------------------->*/
 
 .albums__container {
-	margin-bottom: 9.38vw;
+	margin-bottom: 180px;
 }
 
 .albums__cards {
@@ -484,34 +539,31 @@ body {
 
 .slider {
 	overflow: hidden;
-	width: 60.94vw;
+	width: 100%;
 }
 
 .slider_line {
 	display: flex;
-	/*gap: 1.56vw;*/
 	position: relative;
-	left: -19.79vw;
 	transition: all 0.5s ease-out;
 }
 
 .card {
-	margin-right: 1.56vw;
+	margin-right: 30px;
 	display: flex;
 	flex-direction: column;
-	width: 18.23vw;
-	height: 24.64vw;
+	width: 33%;
 	border-radius: 30px 0px;
 	background: rgb(53, 50, 50);
 }
 
 /*.last-card {
-	margin-right: 3.13vw;
+	margin-right: 60px;
 }*/
 
 .card_img {
-	width: 18.23vw;
-	height: 14.58vw;
+	width: 350px;
+	height: 280px;
 	border-radius: 30px 0px;
 }
 
@@ -519,15 +571,15 @@ body {
 	display: flex;
 	flex-direction: column;
 	flex: 1 1 auto;
-	padding: 1.56vw 0 0 1.82vw;
-	font-size: 0.94vw;
-	line-height: 1.41vw;
+	padding: 30px 0 0 35px;
+	font-size: 18px;
+	line-height: 27px;
 }
 
 .card__content_title {
 	font-weight: 700;
 	opacity: 0.5;
-	margin-bottom: 1.04vw;
+	margin-bottom: 20px;
 }
 
 .card__content_name {
@@ -535,7 +587,7 @@ body {
 }
 
 .card__footer {
-	padding: 1.56vw 0 0 1.82vw;
+	padding: 30px 0 0 35px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -543,15 +595,15 @@ body {
 
 .card__footer_data {
 	font-weight: 700;
-	font-size: 0.83vw;
-	line-height: 1.25vw;
+	font-size: 16px;
+	line-height: 24px;
 	text-transform: uppercase;
 	opacity: 0.5;
 }
 
 .card__footer_btn {
-	width: 9.38vw;
-	height: 3.13vw;
+	width: 50%;
+	height: 60px;
 	background: #7A66CC;
 	border-radius: 10px 0px;
 	text-transform: uppercase;
@@ -567,8 +619,8 @@ body {
 }
 
 .albums__arrows {
-	width: 2.08vw;
-	height: 3.13vw;
+	width: 40px;
+	height: 60px;
 	position: absolute;
 	top: 45%;
 	cursor: pointer;
@@ -583,14 +635,13 @@ body {
 .arrow_left {
 	background: url(../img/albums/arrowl.svg) 0 0 no-repeat;
 	background-size: contain;
-	left: -4.17vw;
+	left: -80px;
 }
 
 .arrow_right {
 	background: url(../img/albums/arrowr.svg) 0 0 no-repeat;
 	background-size: contain;
-	/*right: -4.17vw;*/
-	right: -2.61vw;
+	right: -50px;
 }
 
 /*<---------------------------------------------->*/
@@ -608,41 +659,41 @@ body {
 
 .footer__contacts {
 	display: flex;
-	gap: 1.56vw;
-	margin-bottom: 3.65vw;
+	gap: 30px;
+	margin-bottom: 70px;
 }
 
 .contacts__descr {
 	display: flex;
-	gap: 0.26vw;
+	gap: 5px;
 	flex-direction: column;
 	align-items: flex-end;
 	font-weight: 600;
-	font-size: 0.94vw;
-	line-height: 1.41vw;
+	font-size: 18px;
+	line-height: 27px;
 	text-transform: uppercase;
 }
 
 .contacts__contact {
 	display: flex;
-	gap: 0.26vw;
+	gap: 5px;
 	flex-direction: column;
 	font-weight: 400;
-	font-size: 0.94vw;
-	line-height: 1.41vw;
+	font-size: 18px;
+	line-height: 27px;
 	text-transform: uppercase;
 }
 
 .footer__items {
 	display: flex;
 	justify-content: center;
-	gap: 1.56vw;
+	gap: 30px;
 	margin-bottom: 5.21vw;
 }
 
 .footer__item img {
-	width: 3.13vw;
-	height: 3.13vw;
+	width: 60px;
+	height: 60px;
 }
 
 .footer__item:hover {
@@ -653,9 +704,9 @@ body {
 
 .footer__author {
 	font-weight: 400;
-	font-size: 0.68vw;
-	line-height: 1.04vw;
+	font-size: 13px;
+	line-height: 20px;
 	text-transform: uppercase;
 	opacity: 0.5;
-	margin-bottom: 2.08vw;
+	margin-bottom: 40px;
 }
